--- a/templates/command/config.js.twig
+++ b/templates/command/config.js.twig
@@ -26,6 +26,8 @@ export const apiConfig = {
     clientItemsPerPage: {{ apiPlatform.client_items_per_page }},
     itemsPerPageParameterName: '{{ apiPlatform.items_per_page_parameter_name }}',
     maximumItemsPerPage: {{ apiPlatform.maximum_items_per_page }},
+    pageParameterName: '{{ apiPlatform.page_parameter_name }}',
+    orderParameterName: '{{ apiPlatform.order_parameter_name }}'
 }
 {% else %}
 /**
@@ -35,6 +37,8 @@ export const apiConfig = {
  *    client_items_per_page: true
  *    items_per_page_parameter_name: itemsPerPage
  *    maximum_items_per_page: 50
+ *    page_parameter_name: page
+ *    order_parameter_name: 50
  *
  * edit the file and run again: php bin/console app:dump-js-config
  */
