--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -4,7 +4,7 @@
 <div class="container">
 
     <h4 class="welcome">Welcome to</h4>
-    the demo of Symfony 3.3+ / Webpack encore / Vuejs / Quasar
+    the demo of Symfony 4+ / Webpack encore / Vuejs / Quasar / DevExtreme
     <h6 class="hint">You can login with test_php/test</h6>
 
     {% if error %}
