--- a/templates/spa-quasar.html.twig
+++ b/templates/spa-quasar.html.twig
@@ -2,5 +2,6 @@
 
 {% block stylesheets %}
 {{ parent() }}
+{# @todo is it still usefull with webpack4 ?#}
 <link rel="stylesheet" href="{{ asset('dist/css/quasar-bootstrap.css') }}">
 {% endblock %}
