--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,8 @@
         {% endif %}
         #}
     </head>
-    <body class="mat">
+    {# mat is for quasar, dx-* are for devextrem, it should be configurable @todo #}
+    <body class="dx-theme-generic dx-theme-generic-typography dx-color-scheme-light mat">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <h1><a href="/"><u>Demo of symfony 4</u></a>
                 <span style="font-size: smaller">with flex,
