--- a/templates/default/menu.html.twig
+++ b/templates/default/menu.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    {#<ul class="nav nav-tabs" id="myTab" role="tablist">
+{% block menuPage %}
+    <ul class="nav nav-tabs bg-light" id="myTab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Intro</a>
         </li>
@@ -11,8 +11,10 @@
         <li class="nav-item">
             <a class="nav-link" id="extrainfos-tab" data-toggle="tab" href="#extrainfos" role="tab" aria-controls="extrainfos" aria-selected="false">Extra infos</a>
         </li>
-    </ul>#}
+    </ul>
+{% endblock %}
 
+{% block body %}
     <div class="container">
         <div class="tab-content">
             <div class="tab-pane fade show active" id="demos" role="tabpanel" aria-labelledby="demos-tab">
@@ -76,4 +78,9 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('js/home') }}
 {% endblock %}
