add swagger info for login
update from doctrine where default=now() is now deprecated
change routes for ezadmin, and admin react

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -89,7 +89,7 @@ Security is managed by json_login or JWT with symfony security system.{% endbloc
                         <span style="font-size: smaller">and webpack/encore,
                             <span style="font-size: smaller">VueJS,
                                 <span style="font-size: smaller">ApiPlatform,
-                                    <span style="font-size: smaller">HttpPlug,...</span>
+                                    <span style="font-size: smaller">HttpClient,...</span>
                                 </span>
                             </span>
                         </span>
