Update to Sf4.4 (before upgrade to sf 5) and fix all code stylish

--- a/templates/command/config.js.twig
+++ b/templates/command/config.js.twig
@@ -14,7 +14,7 @@ export const loginInfos = {
     },
     uriIsLoggedIn: {
         json: '{{ uriIsLoggedInJson | raw }}',
-        jwt: '{{ uriIsLoggedInJwt | raw }}',
+        jwt: '{{ uriIsLoggedInJwt | raw }}'
     },
     loginUsernamePath: '{{ loginUsernamePath }}',
     loginPasswordPath: '{{ loginPasswordPath }}'
