fix sf version in vue app

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,23 +20,23 @@ Security is managed by json_login or JWT with symfony security system.{% endbloc
             <meta name="og:description" content="{% block metaOgDescription %}This application has been realized to get a sample front app with symfony 3+ and javascript frontend like vuejs, angular or react. But it also shows basic controllers with what most developpers do :
 basic controller, controller with twig, http call to external API, logging, API... We will try to not use front manipulation outside of VueJS/Angular (the sample with twig are really basic and won't use form per example).
 Security is managed by json_login or JWT with symfony security system.{% endblock %}">
-            <meta property="og:url" content="https://www.myalerts.org/" />
+            <meta property="og:url" content="https://www.richard.icu/" />
             <meta property="og:type" content="website" />
-            <meta name="twitter:image" content="https://www.myalerts.org/android-icon-192x192.png" />
+            <meta name="twitter:image" content="https://www.richard.icu/android-icon-192x192.png" />
 
             <meta name="twitter:card" content="summary" />
             <meta name="twitter:site" content="@Rebolon" />
-            <meta name="twitter:title" property="twitter:title" content="{% block metaTwitterTitle %}Demo sf-flex-encore-vuejs{% endblock %}">
+            <meta name="twitter:title" property="twitter:title" content="{% block metaTwitterTitle %}Technical Demo of PHP Symfony and Javascript - from Benjamin RICHARD{% endblock %}">
             <meta name="twitter:description" content="{% block metaTwitterDescription %}This application has been realized to get a sample front app with symfony 3+ and javascript frontend like vuejs, angular or react. But it also shows basic controllers with what most developpers do :
 basic controller, controller with twig, http call to external API, logging, API... We will try to not use front manipulation outside of VueJS/Angular (the sample with twig are really basic and won't use form per example).
 Security is managed by json_login or JWT with symfony security system.{% endblock %}">
-            <meta name="twitter:url" content="https://www.myalerts.org/" />
-            <meta name="twitter:domain" content="myalerts.org" />
-            <meta name="twitter:image" content="https://www.myalerts.org/android-icon-192x192.png" />
+            <meta name="twitter:url" content="https://www.richard.icu/" />
+            <meta name="twitter:domain" content="richard.icu" />
+            <meta name="twitter:image" content="https://richard.icu/android-icon-192x192.png" />
 
             <meta name="google" content="nositelinkssearchbox" />
 
-            <meta name="application-name" content="{% block metaAppName %}MyAlerts - from Benjamin RICHARD{% endblock %}"/>
+            <meta name="application-name" content="{% block metaAppName %}Technical Demo of PHP Symfony and Javascript - from Benjamin RICHARD{% endblock %}"/>
             <meta name="msapplication-TileColor" content="#ffffff">
             <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
